Correcciones de filtros para identificar padres